Fix to docker-file.

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Justin Littman <justinlittman@gwu.edu>
 
 RUN pip install --upgrade pip
 #This pre-fetches the most recent requirements.txt.
-ADD https://github.com/gwu-libraries/sfm-flickr-harvester/raw/master/requirements.txt /tmp/sfm-setup/
+ADD https://github.com/gwu-libraries/sfm-flickr-harvester/raw/master/requirements.txt /tmp/
 RUN pip install -r /tmp/requirements.txt
 RUN pip install appdeps
 WORKDIR /opt/sfm-flickr-harvester
