--- a/docker/master.docker-compose.yml
+++ b/docker/master.docker-compose.yml
@@ -7,8 +7,7 @@ sfmrabbit:
         - RABBITMQ_DEFAULT_USER=sfm_user
         - RABBITMQ_DEFAULT_PASS=password
 sfmflickrharvester:
-    #TODO: Change this to an image instead of build.
-    build: ./master
+    image: gwul/sfm-flickr-harvester:master
     links:
         - sfmrabbit:mq
     restart: always
