Added docker travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
   - "2.7"
-install: "pip install -r requirements.txt"
+sudo: required
+services:
+  - docker
+before_install:
+- docker-compose -f docker/dev.docker-compose.yml up -d
+- docker exec docker_sfmflickrharvester_1 python -m unittest discover
 script: python -m unittest discover
 notifications:
   email:
