--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -1,14 +1,15 @@
 FROM python:2.7
 MAINTAINER Justin Littman <justinlittman@gwu.edu>
 
+ENV sfm_harvester_version 0.2.0
 RUN apt-get update && apt-get install -y \
     wget \
     zip
 #Upgrade pip
 RUN pip install --upgrade pip
-RUN wget --no-check-certificate https://github.com/gwu-libraries/sfm-flickr-harvester/archive/0.2.0.zip
-RUN unzip 0.2.0.zip
-RUN mv sfm-flickr-harvester-0.2.0 /opt/sfm-flickr-harvester
+RUN wget --no-check-certificate https://github.com/gwu-libraries/sfm-flickr-harvester/archive/${sfm_harvester_version}.zip
+RUN unzip ${sfm_harvester_version}.zip
+RUN mv sfm-flickr-harvester-${sfm_harvester_version} /opt/sfm-flickr-harvester
 WORKDIR /opt/sfm-flickr-harvester
 RUN pip install -r requirements.txt
 RUN pip install appdeps
