--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -12,4 +12,5 @@ sfmflickrharvester:
         - sfmrabbit:mq
     volumes:
         - "..:/opt/sfm-flickr-harvester"
-    restart: always
+        - "../../sfm-utils:/opt/sfm-utils"
+#    restart: always
