--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -14,3 +14,5 @@ sfmflickrharvester:
         - "..:/opt/sfm-flickr-harvester"
         - "../../sfm-utils:/opt/sfm-utils"
 #    restart: always
+    environment:
+        - DEBUG=True
