--- a/docker/ci.docker-compose.yml
+++ b/docker/ci.docker-compose.yml
@@ -10,4 +10,7 @@ sfmflickrharvester:
         - sfmrabbit:mq
     volumes:
         - "..:/opt/sfm-flickr-harvester"
-    command: bash -c "pip install -r requirements.txt --upgrade && appdeps.py --port-wait mq:5672 && python flickr_harvester.py service mq $MQ_ENV_RABBITMQ_DEFAULT_USER $MQ_ENV_RABBITMQ_DEFAULT_PASS --debug"
+    environment:
+        - FLICKR_KEY
+        - FLICKR_SECRET
+    command: bash -c "pip install -r requirements.txt --upgrade && appdeps.py --port-wait mq:5672 && python flickr_harvester.py --debug=True service mq sfm_user password"
