refs sfm 80. Adding requirements directly to master to allow testing.

--- a/docker/ci.docker-compose.yml
+++ b/docker/ci.docker-compose.yml
@@ -13,4 +13,4 @@ sfmflickrharvester:
     environment:
         - FLICKR_KEY
         - FLICKR_SECRET
-    command: bash -c "pip install -r requirements.txt --upgrade && appdeps.py --port-wait mq:5672 && python flickr_harvester.py --debug=True service mq sfm_user password"
+    command: bash -c "pip install -r requirements/master.txt --upgrade && appdeps.py --port-wait mq:5672 && python flickr_harvester.py --debug=True service mq sfm_user password"
