--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -14,6 +14,7 @@ sfmflickrharvester:
     volumes:
         - "..:/opt/sfm-flickr-harvester"
         - "../../sfm-utils:/opt/sfm-utils"
+        - "../../warcprox:/opt/warcprox"
 #    restart: always
     environment:
         - DEBUG=True
