--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 - docker-compose -f docker/ci.docker-compose.yml pull
 - docker-compose -f docker/ci.docker-compose.yml up -d
 - docker exec docker_sfmflickrharvester_1 python -m unittest discover
-install: pip install -r requirements.txt
+install: pip install -r requirements/requirements.txt
 script: python -m unittest discover
 notifications:
   email:
