--- a/docker/master.docker-compose.yml
+++ b/docker/master.docker-compose.yml
@@ -5,6 +5,7 @@ sfmrabbit:
         - "15672:15672"
     restart: always
     environment:
+        - TZ=EST
         - RABBITMQ_DEFAULT_USER=sfm_user
         - RABBITMQ_DEFAULT_PASS=password
 sfmflickrharvester:
@@ -13,4 +14,5 @@ sfmflickrharvester:
         - sfmrabbit:mq
     restart: always
     environment:
+        - TZ=EST
         - DEBUG=True
