--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,7 @@
 [bumpversion]
-current_version = 0.3.0
+current_version = 0.4.0
 
-[bumpversion:file:docker/prod/Dockerfile]
+[bumpversion:file:docker/prod/exporter/Dockerfile]
+
+[bumpversion:file:docker/prod/harvester/Dockerfile]
 
