--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,8 @@
 [bumpversion]
 current_version = 0.5.1
 
+[bumpversion:file:setup.py]
+
 [bumpversion:file:docker/prod/exporter/Dockerfile]
 
 [bumpversion:file:docker/prod/harvester/Dockerfile]
